Updated footer h2 to h3, updated divs to section, articles and aside for proper scemantics and updated CSS values

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         </nav>
     </header>
     <div class="hero">
+        
     </div>
     <main>
         <section class="content">
@@ -67,7 +68,7 @@
         </section>
 
         <section class="benefits">
-            <article class="benefit">
+            <aside class="benefit">
                 <h3>Lead Generation</h3>
                 <img src="./assets/images/lead-generation.png" alt="lead generation icon" />
                 <p>
@@ -75,8 +76,8 @@
                     directly
                     to your website.
                 </p>
-            </article>
-            <article class="benefit">
+            </aside>
+            <aside class="benefit">
                 <h3>Brand Awareness</h3>
                 <img src="./assets/images/brand-awareness.png" alt="brand awareness icon" />
                 <p>
@@ -84,8 +85,8 @@
                     visibility
                     for your business.
                 </p>
-            </article>
-            <article class="benefit">
+            </side>
+            <aside class="benefit">
                 <h3>Cost Management</h3>
                 <img src="./assets/images/cost-management.png" alt="cost management icon" />
                 <p>
@@ -93,13 +94,13 @@
                     longer
                     need to advertise your page.
                 </p>
-            </article>
+            </aside>
         </section>
     </main>
 </body>
-<!-- updated div to footer element-->
+<!-- updated div to footer element and changed h2 to h3 to follow proper scemantics-->
 <footer>
-    <h2>Made with ❤️️ by Horiseon</h2>
+    <h3>Made with ❤️️ by Horiseon</h3>
     <p>
         &copy; 2019 Horiseon Social Solution Services, Inc.
     </p>
