Changed hero div to section and added aria-label for accessibility

--- a/index.html
+++ b/index.html
@@ -26,13 +26,12 @@
             </ul>
         </nav>
     </header>
-    <div class="hero">
-        
-    </div>
+    <!-- Changed div to section element and added alt text to picture -->
+    <section class="hero" aria-label="Picture of a Digital Marketing Meeting"></section>
     <main>
         <section class="content">
             <!-- Changed from class to id to correct issue with link not working on search-engine-optimization link and added 
-        "alt text" for pictures. Changed div to article to follow semantics -->
+        "alt text" for pictures. Changed div to article to follow semantics, updated divs to articles and wrapped in a section -->
             <article id="search-engine-optimization" class="search-engine-optimization">
                 <img src="./assets/images/search-engine-optimization.jpg" class="float-left"
                     alt="SEO written on a notepad in an office." />
@@ -85,20 +84,20 @@
                     visibility
                     for your business.
                 </p>
-            </side>
-            <aside class="benefit">
-                <h3>Cost Management</h3>
-                <img src="./assets/images/cost-management.png" alt="cost management icon" />
-                <p>
-                    As the search ranking for your business increases, your advertising costs decrease, and you no
-                    longer
-                    need to advertise your page.
-                </p>
-            </aside>
+                </side>
+                <aside class="benefit">
+                    <h3>Cost Management</h3>
+                    <img src="./assets/images/cost-management.png" alt="cost management icon" />
+                    <p>
+                        As the search ranking for your business increases, your advertising costs decrease, and you no
+                        longer
+                        need to advertise your page.
+                    </p>
+                </aside>
         </section>
     </main>
 </body>
-<!-- updated div to footer element and changed h2 to h3 to follow proper scemantics-->
+<!-- updated div to footer element and changed h2 to h3 to follow proper scemantics and placed outside of body -->
 <footer>
     <h3>Made with ❤️️ by Horiseon</h3>
     <p>
