Removed id declarations

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
+    <!-- Added proper title -->
     <title>Horiseon SEO</title>
 </head>
 
@@ -31,8 +32,9 @@
     <main>
         <section class="content">
             <!-- Changed from class to id to correct issue with link not working on search-engine-optimization link and added 
-        "alt text" for pictures. Changed div to article to follow semantics, updated divs to articles and wrapped in a section -->
-            <article id="search-engine-optimization" class="search-engine-optimization">
+        "alt text" for pictures. Changed div to article to follow semantics, updated divs to articles and wrapped in a section,
+    removed id declarations from each article -->
+            <article class="search-engine-optimization">
                 <img src="./assets/images/search-engine-optimization.jpg" class="float-left"
                     alt="SEO written on a notepad in an office." />
                 <h2>Search Engine Optimization</h2>
@@ -42,7 +44,7 @@
                     your visibility and find the right customers for your business.
                 </p>
             </article>
-            <article id="online-reputation-management" class="online-reputation-management">
+            <article class="online-reputation-management">
                 <img src="./assets/images/online-reputation-management.jpg" class="float-right"
                     alt="A laptop computer with a bargraphof representation." />
                 <h2>Online Reputation Management</h2>
@@ -53,7 +55,7 @@
                     you the control over what potential customers see when they search for your business.
                 </p>
             </article>
-            <article id="social-media-marketing" class="social-media-marketing">
+            <article class="social-media-marketing">
                 <img src="./assets/images/social-media-marketing.jpg" class="float-left"
                     alt="A wooden table covered with pictures of emojis and bubble words surrounded by 6 people." />
                 <h2>Social Media Marketing</h2>
@@ -96,13 +98,13 @@
                 </aside>
         </section>
     </main>
+    <!-- updated div to footer element and changed h2 to h3 to follow proper scemantics -->
+    <footer>
+        <h3>Made with ❤️️ by Horiseon</h3>
+        <p>
+            &copy; 2019 Horiseon Social Solution Services, Inc.
+        </p>
+    </footer>
 </body>
-<!-- updated div to footer element and changed h2 to h3 to follow proper scemantics and placed outside of body -->
-<footer>
-    <h3>Made with ❤️️ by Horiseon</h3>
-    <p>
-        &copy; 2019 Horiseon Social Solution Services, Inc.
-    </p>
-</footer>
 
 </html>
