Moved Hero to Main, corrected typographical errors in notes, and refactored spacing in index.html and style.css

--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
             </ul>
         </nav>
     </header>
-    <!-- Changed div to section element and added alt text to picture -->
-    <section class="hero" aria-label="Picture of a Digital Marketing Meeting"></section>
+    <!-- Changed div to section element and added alt text to images and icons moved hero to main -->
     <main>
+        <section class="hero" aria-label="Picture of a Digital Marketing Meeting"></section>
+
         <section class="content">
             <!-- Changed from class to id to correct issue with link not working on search-engine-optimization link and added 
         "alt text" for pictures. Changed div to article to follow semantics, updated divs to articles and wrapped in a section -->
@@ -45,7 +46,7 @@
             </article>
             <article id="online-reputation-management" class="online-reputation-management">
                 <img src="./assets/images/online-reputation-management.jpg" class="float-right"
-                    alt="A laptop computer with a bargraphof representation." />
+                    alt="A laptop computer with a bargraph of reputation." />
                 <h2>Online Reputation Management</h2>
                 <p>
                     The web is full of opinions, and some of these can be negative. Social media allows anyone with an
@@ -97,7 +98,7 @@
                 </aside>
         </section>
     </main>
-    <!-- updated div to footer element and changed h2 to h3 to follow proper scemantics -->
+    <!-- updated div to footer element and changed h2 to h3 to follow proper semantics -->
     <footer>
         <h3>Made with ❤️️ by Horiseon</h3>
         <p>
