--- a/index.html
+++ b/index.html
@@ -29,10 +29,7 @@
     </header>
     <!-- Changed div to section element and added alt text to images and icons moved hero to main -->
     <main>
-        <figure>
-            <!-- Hero content -->
-            <section class="hero" aria-label="Picture of a Digital Marketing Meeting"></section>
-        </figure>
+        <figure class="hero" aria-label="Picture of a Digital Marketing Meeting"></figure>
 
 
         <section class="content">
